set(ArborX_TARGET ArborX)
if(CMAKE_SOURCE_DIR STREQUAL CMAKE_CURRENT_SOURCE_DIR)
  cmake_minimum_required(VERSION 3.12)
  find_package(ArborX REQUIRED)
  enable_testing()
  set(ArborX_TARGET ArborX::ArborX)
elseif()
  set(ArborX_TARGET ArborX)
endif()

if(Kokkos_DEVICES MATCHES "Cuda")
  add_executable(ArborX_CudaAccessTraits.exe example_cuda_access_traits.cpp)
  target_link_libraries(ArborX_CudaAccessTraits.exe ${ArborX_TARGET})
  add_test(NAME ArborX_CudaAccessTraits_Example COMMAND ./ArborX_CudaAccessTraits.exe)
endif()
