if(Kokkos_ENABLE_CUDA)
  add_executable(ArborX_CudaAccessTraits.exe example_cuda_access_traits.cpp)
  target_link_libraries(ArborX_CudaAccessTraits.exe ArborX::ArborX)
  add_test(NAME ArborX_CudaAccessTraits_Example COMMAND ./ArborX_CudaAccessTraits.exe)
else()
  add_executable(ArborX_HostAccessTraits.exe example_host_access_traits.cpp)
  target_link_libraries(ArborX_HostAccessTraits.exe ArborX::ArborX)
  add_test(NAME ArborX_HostAccessTraits_Example COMMAND ./ArborX_HostAccessTraits.exe)
endif()
